Add header for Billing App with user badge

--- a/shared/menu.html
+++ b/shared/menu.html
@@ -1,3 +1,9 @@
+<h3>
+  Billing App <br>
+  <small id="userBadge" style="font-size:12px;color:#c7d2fe"></small>
+</h3>
+
+
 <!-- ☰ HAMBURGER -->
 <button id="menuBtn">☰</button>
 
