--- a/admin-users.html
+++ b/admin-users.html
@@ -1,181 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<title>Admin – User Management</title>
-
+<title>User Management</title>
 <link rel="stylesheet" href="assets/menu.css">
-
 <style>
-body{
-  margin:0;
-  font-family:Arial;
-  background:#f4f6fb;
-}
-
-.main{
-  padding:20px;
-}
-
-h2{
-  margin-bottom:14px;
-}
-
-table{
-  width:100%;
-  border-collapse:collapse;
-  background:#fff;
-  border-radius:10px;
-  overflow:hidden;
-  box-shadow:0 8px 20px rgba(0,0,0,.08);
-}
-
-th,td{
-  padding:10px;
-  border-bottom:1px solid #eee;
-  font-size:14px;
-}
-
-th{
-  background:#2563eb;
-  color:#fff;
-  text-align:left;
-}
-
-.badge{
-  padding:4px 8px;
-  border-radius:10px;
-  font-size:12px;
-  font-weight:bold;
-}
-
-.admin{background:#dcfce7;color:#166534}
-.staff{background:#e0e7ff;color:#1e3a8a}
-.pending{background:#fef3c7;color:#92400e}
-.approved{background:#dcfce7;color:#166534}
-
-button{
-  padding:5px 10px;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-  font-size:12px;
-}
-
-.approve{background:#16a34a;color:#fff}
-.block{background:#dc2626;color:#fff}
-.role{background:#2563eb;color:#fff}
-
-button:disabled{
-  opacity:.5;
-  cursor:not-allowed;
-}
+.main{padding:20px}
+table{width:100%;border-collapse:collapse}
+th,td{border:1px solid #ccc;padding:8px}
+th{background:#eee}
 </style>
 </head>
 
 <body>
 
-<!-- MENU -->
 <div id="menuContainer"></div>
 
 <div class="main">
-  <h2>👤 User Management</h2>
+<h2>👤 User Management</h2>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Role</th>
-        <th>Status</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody id="userRows"></tbody>
-  </table>
+<table>
+<thead>
+<tr>
+  <th>Name</th>
+  <th>Email</th>
+  <th>Role</th>
+  <th>Approved</th>
+  <th>Action</th>
+</tr>
+</thead>
+<tbody id="rows"></tbody>
+</table>
+
+<h3>🧾 Audit Log</h3>
+<ul id="audit"></ul>
 </div>
 
-<script src="shared/menu.js"></script>
 <script>
-fetch("shared/menu.html")
-  .then(r=>r.text())
-  .then(html=>{
-    document.getElementById("menuContainer").innerHTML = html;
-    initMenu();
-    guardAdmin();
-    renderUsers();
-  });
-
-/* 🔐 ADMIN GUARD */
-function guardAdmin(){
-  const me = JSON.parse(localStorage.getItem("user"));
-  const users = JSON.parse(localStorage.getItem("users")||"[]");
-  const self = users.find(u => u.uid === me?.uid);
-
-  if(!self || self.role !== "admin"){
-    alert("Admin access only");
-    location.href = "dashboard.html";
-  }
+const admin = JSON.parse(localStorage.getItem("user")||"{}");
+if(admin.role!=="admin"){
+  alert("Admin only");
+  location.href="dashboard.html";
 }
 
-/* 👤 RENDER USERS */
-function renderUsers(){
-  const users = JSON.parse(localStorage.getItem("users") || "[]");
-  const tbody = document.getElementById("userRows");
-  tbody.innerHTML = "";
+const users = JSON.parse(localStorage.getItem("users")||"[]");
+const audit = JSON.parse(localStorage.getItem("auditLog")||"[]");
 
+function render(){
+  rows.innerHTML="";
   users.forEach(u=>{
-    const tr = document.createElement("tr");
-
-    tr.innerHTML = `
+    const tr=document.createElement("tr");
+    tr.innerHTML=`
       <td>${u.name}</td>
       <td>${u.email}</td>
       <td>
-        <span class="badge ${u.role}">
-          ${u.role.toUpperCase()}
-        </span>
+        <select onchange="setRole('${u.uid}',this.value)">
+          <option ${u.role==="staff"?"selected":""}>staff</option>
+          <option ${u.role==="admin"?"selected":""}>admin</option>
+        </select>
       </td>
+      <td>${u.approved?"✅":"❌"}</td>
       <td>
-        <span class="badge ${u.approved ? "approved":"pending"}">
-          ${u.approved ? "APPROVED":"PENDING"}
-        </span>
-      </td>
-      <td>
-        <button class="approve"
-          onclick="toggleApprove('${u.uid}')">
-          ${u.approved ? "Block":"Approve"}
-        </button>
-        <button class="role"
-          onclick="toggleRole('${u.uid}')">
-          Make ${u.role === "admin" ? "Staff":"Admin"}
-        </button>
+        ${u.approved?"":"<button onclick=\"approve('"+u.uid+"')\">Approve</button>"}
       </td>
     `;
-    tbody.appendChild(tr);
+    rows.appendChild(tr);
+  });
+
+  auditEl.innerHTML="";
+  audit.forEach(a=>{
+    const li=document.createElement("li");
+    li.textContent=`${a.time} – ${a.by} approved ${a.user}`;
+    auditEl.appendChild(li);
   });
 }
 
-/* ✅ APPROVE / BLOCK */
-function toggleApprove(uid){
-  const users = JSON.parse(localStorage.getItem("users") || "[]");
-  const u = users.find(x=>x.uid===uid);
-  if(!u) return;
-
-  u.approved = !u.approved;
-  localStorage.setItem("users", JSON.stringify(users));
-  renderUsers();
+function approve(uid){
+  const u=users.find(x=>x.uid===uid);
+  u.approved=true;
+  audit.push({
+    time:new Date().toLocaleString(),
+    by:admin.name,
+    user:u.email
+  });
+  localStorage.setItem("users",JSON.stringify(users));
+  localStorage.setItem("auditLog",JSON.stringify(audit));
+  render();
 }
 
-/* 🔁 ROLE CHANGE */
-function toggleRole(uid){
-  const users = JSON.parse(localStorage.getItem("users") || "[]");
-  const u = users.find(x=>x.uid===uid);
-  if(!u) return;
-
-  u.role = u.role === "admin" ? "staff" : "admin";
-  localStorage.setItem("users", JSON.stringify(users));
-  renderUsers();
+function setRole(uid,role){
+  users.find(x=>x.uid===uid).role=role;
+  localStorage.setItem("users",JSON.stringify(users));
 }
+
+render();
+</script>
+
+<script src="shared/menu.js"></script>
+<script>
+fetch("shared/menu.html").then(r=>r.text()).then(h=>{
+  menuContainer.innerHTML=h;initMenu();
+});
 </script>
 
 </body>
