--- a/login.html
+++ b/login.html
@@ -3,173 +3,97 @@
 <head>
 <meta charset="UTF-8">
 <title>Login</title>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-family:Arial, sans-serif;
+  margin:0;height:100vh;
+  display:flex;align-items:center;justify-content:center;
+  font-family:Arial;
   background:linear-gradient(135deg,#667eea,#764ba2);
 }
-
 .card{
-  background:#fff;
-  padding:30px;
-  width:360px;
+  background:#fff;padding:30px;width:360px;
   border-radius:16px;
   box-shadow:0 20px 40px rgba(0,0,0,.2);
   text-align:center;
 }
-
-h2{margin:0 0 6px}
-
-p{
-  color:#666;
-  font-size:14px;
-  margin-bottom:16px;
-}
-
 .last-user{
-  background:#f1f5f9;
-  padding:10px;
-  border-radius:10px;
-  font-size:13px;
-  color:#333;
-  margin-bottom:18px;
-  display:none;
+  background:#f1f5f9;padding:10px;border-radius:10px;
+  font-size:13px;margin-bottom:16px;display:none;
 }
-
 button{
-  width:100%;
-  padding:12px;
-  font-size:15px;
-  border-radius:10px;
-  border:none;
-  cursor:pointer;
-  background:#2d6cdf;
-  color:#fff;
+  width:100%;padding:12px;font-size:15px;
+  border-radius:10px;border:none;cursor:pointer;
+  color:#fff;background:#2563eb;
 }
-
-button.staff{
-  background:#16a34a;
-}
-
-button:hover{opacity:.92}
-
-.small{
-  font-size:12px;
-  color:#888;
-  margin-top:14px;
-}
+button.staff{background:#16a34a}
+button:hover{opacity:.9}
+.small{font-size:12px;color:#666;margin-top:12px}
 </style>
 </head>
-
 <body>
 
 <div class="card">
   <h2>Billing App</h2>
   <p>Sign in to continue</p>
 
-  <!-- LAST LOGIN INFO -->
-  <div class="last-user" id="lastUserBox"></div>
+  <div class="last-user" id="lastUser"></div>
 
-  <button onclick="login('admin')">🔐 Admin Login</button>
-  <br><br>
+  <button onclick="login('admin')">🔐 Admin Login</button><br><br>
   <button class="staff" onclick="login('staff')">👤 Staff Login</button>
 
-  <div class="small">
-    Authorized users only
-  </div>
+  <div class="small">Authorized users only</div>
 </div>
 
-<!-- FIREBASE -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
 <script>
-/* 🔥 FIREBASE CONFIG */
-const firebaseConfig = {
+firebase.initializeApp({
   apiKey: "AIzaSyAJliCUJkElsPwbJUGrTUmB7EPyiGaCniQ",
   authDomain: "eic-billing-software-55635.firebaseapp.com",
   projectId: "eic-billing-software-55635",
   storageBucket: "eic-billing-software-55635.firebasestorage.app",
   messagingSenderId: "376103136888",
   appId: "1:376103136888:web:ae1ab4d7195037a529478d"
-};
-
-firebase.initializeApp(firebaseConfig);
+});
 const auth = firebase.auth();
 
-/* 👁 SHOW LAST LOGIN USER */
-(function showLastUser(){
+/* show last login */
+(function(){
   const last = JSON.parse(localStorage.getItem("lastUser"));
   if(!last) return;
-
-  const box = document.getElementById("lastUserBox");
-  box.style.display = "block";
-  box.innerHTML = `
-    <b>Last login:</b><br>
+  lastUser.style.display="block";
+  lastUser.innerHTML = `
+    <b>Last login</b><br>
     ${last.name}<br>
-    <small>${last.email}</small><br>
-    <small>${last.role}</small>
+    <small>${last.email} – ${last.role}</small>
   `;
 })();
 
-/* 🔐 LOGIN */
 function login(role){
   const provider = new firebase.auth.GoogleAuthProvider();
+  auth.signInWithPopup(provider).then(res=>{
+    const u = res.user;
 
-  auth.signInWithPopup(provider)
-    .then(res=>{
-      const u = res.user;
+    const user = {
+      uid:u.uid,
+      name:u.displayName,
+      email:u.email,
+      role
+    };
+    localStorage.setItem("user",JSON.stringify(user));
+    localStorage.setItem("lastUser",JSON.stringify(user));
 
-      const userObj = {
-        uid: u.uid,
-        name: u.displayName,
-        email: u.email,
-        photo: u.photoURL,
-        role: role
-      };
-
-      // active session
-      localStorage.setItem("user", JSON.stringify(userObj));
-
-      // last login info
-      localStorage.setItem("lastUser", JSON.stringify({
-        name: u.displayName,
-        email: u.email,
-        role: role,
-        time: new Date().toLocaleString()
-      }));
-
-      // optional registry (history)
-      const users = JSON.parse(localStorage.getItem("users") || "[]");
-      if(!users.find(x => x.uid === u.uid)){
-        users.push({
-          uid: u.uid,
-          name: u.displayName,
-          email: u.email,
-          role: role,
-          createdAt: new Date().toISOString()
-        });
-        localStorage.setItem("users", JSON.stringify(users));
-      }
-
-      location.href = "dashboard.html";
-    })
-    .catch(err=>{
-      alert(err.message);
-    });
+    location.href="dashboard.html";
+  });
 }
 
-/* 🔁 AUTO REDIRECT IF LOGGED IN */
+/* auto redirect */
 if(localStorage.getItem("user")){
-  location.href = "dashboard.html";
+  location.href="dashboard.html";
 }
 </script>
 
