--- a/shared/menu.html
+++ b/shared/menu.html
@@ -34,7 +34,9 @@
   <a data-go="masters/purchase.html">
     🧾 Purchase Entry
   </a>
-
+<a data-go="projects.html" data-page="projects">
+  📁 Projects
+</a>
   <a data-go="settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
   </a>
