--- a/shared/menu.html
+++ b/shared/menu.html
@@ -35,7 +35,7 @@
     🧾 Purchase Entry
   </a>
 <a data-go="projects.html" data-page="projects">
-  📁 Projects
+  📁 Projects <span class="activeDot"></span>
 </a>
   <a data-go="settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
