--- a/shared/menu.html
+++ b/shared/menu.html
@@ -18,7 +18,10 @@
   <a data-go="index.html" data-page="index">
     🧾 Billing <span class="activeDot"></span>
   </a>
-
+<!-- ✅ NEW PROJECT MENU -->
+  <a data-go="projects/projects.html" data-page="projects">
+    📁 Projects <span class="activeDot"></span>
+  </a>
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
@@ -34,9 +37,7 @@
   <a data-go="masters/purchase.html">
     🧾 Purchase Entry
   </a>
-<a data-go="projects.html" data-page="projects">
-  📁 Projects <span class="activeDot"></span>
-</a>
+
   <a data-go="settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
   </a>
