--- a/shared/menu.html
+++ b/shared/menu.html
@@ -10,7 +10,9 @@
     <small id="userBadge" style="font-size:12px;color:#c7d2fe"></small>
   </h3>
 
-  <!-- MENU LINKS -->
+
+
+  <!-- COMMON -->
   <a data-go="dashboard.html" data-page="dashboard">
     📊 Dashboard <span class="activeDot"></span>
   </a>
@@ -18,10 +20,12 @@
   <a data-go="index.html" data-page="index">
     🧾 Billing <span class="activeDot"></span>
   </a>
-<!-- ✅ NEW PROJECT MENU -->
+
+  <!-- ✅ NEW PROJECT MENU -->
   <a data-go="projects/projects.html" data-page="projects">
     📁 Projects <span class="activeDot"></span>
   </a>
+
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
@@ -43,7 +47,7 @@
   </a>
 
   <a data-go="admin-users.html">
-    👥 Users
+    👤 Users
   </a>
 
   <a data-go="recyclebin.html" data-page="recycle">
@@ -52,10 +56,11 @@
 
   <hr>
 
-  <a id="logoutBtn">
-    🚪 Logout
-  </a>
+  <a id="logoutBtn">🚪 Logout</a>
 </div>
+
+<div id="overlay"></div>
+
 
 <!-- OVERLAY -->
 <div id="overlay"></div>
