--- a/projects/project-list.html
+++ b/projects/project-list.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Projects</title>
+
+<link rel="stylesheet" href="../assets/menu.css">
+
+<style>
+.main{padding:20px}
+table{width:100%;border-collapse:collapse}
+th,td{border:1px solid #ccc;padding:8px}
+th{background:#eee}
+input,select,button{padding:6px}
+</style>
+</head>
+
+<body>
+
+<div id="menuContainer"></div>
+
+<div class="main">
+<h2>📁 Projects</h2>
+
+<input id="projectName" placeholder="Project name">
+<input id="projectClient" placeholder="Client name">
+<button onclick="addNewProject()">➕ Add Project</button>
+
+<br><br>
+
+<select id="statusFilter" onchange="renderProjects()">
+  <option value="">All</option>
+  <option value="running">Running</option>
+  <option value="pending">Pending</option>
+  <option value="closed">Closed</option>
+</select>
+
+<table>
+<thead>
+<tr>
+  <th>Name</th>
+  <th>Client</th>
+  <th>Status</th>
+  <th>Action</th>
+</tr>
+</thead>
+<tbody id="projectRows"></tbody>
+</table>
+</div>
+
+<script src="data/project-store.js"></script>
+<script src="project-service.js"></script>
+<script src="project-ui.js"></script>
+
+<script src="../shared/menu.js"></script>
+<script>
+fetch("../shared/menu.html")
+ .then(r=>r.text())
+ .then(h=>{
+   menuContainer.innerHTML=h;
+   initMenu();
+   renderProjects();
+ });
+</script>
+
+</body>
+</html>
 
