--- a/shared/menu.html
+++ b/shared/menu.html
@@ -26,6 +26,10 @@
     📁 Projects <span class="activeDot"></span>
   </a>
 
+<a data-go="projects/project-list.html" data-page="projects">
+  📁 Projects-List <span class="activeDot"></span>
+</a>
+  
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
