--- a/shared/menu.html
+++ b/shared/menu.html
@@ -10,61 +10,62 @@
     <small id="userBadge" style="font-size:12px;color:#c7d2fe"></small>
   </h3>
 
-
-
-  <!-- COMMON -->
+  <!-- DASHBOARD -->
   <a data-go="dashboard.html" data-page="dashboard">
     📊 Dashboard <span class="activeDot"></span>
   </a>
 
+  <!-- BILLING -->
   <a data-go="index.html" data-page="index">
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <!-- ✅ NEW PROJECT MENU -->
-  <a data-go="projects/projects.html" data-page="projects">
+  <!-- ✅ PROJECTS (ONLY ONE) -->
+  <a data-go="projects/project-list.html" data-page="projects">
     📁 Projects <span class="activeDot"></span>
   </a>
 
-<a data-go="projects/project-list.html" data-page="projects">
-  📁 Projects-List <span class="activeDot"></span>
-</a>
-  
+  <!-- RECORDS -->
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
   </a>
 
+  <!-- CLIENT -->
   <a data-go="masters/client.html" data-page="client">
     👤 Client Master <span class="activeDot"></span>
   </a>
 
+  <!-- VENDOR -->
   <a data-go="masters/vendor.html" data-page="vendor">
     🏭 Vendor Master <span class="activeDot"></span>
   </a>
 
+  <!-- PURCHASE -->
   <a data-go="masters/purchase.html">
     🧾 Purchase Entry
   </a>
 
+  <!-- SETTINGS -->
   <a data-go="settings.html" data-page="settings">
     ⚙ Settings <span class="activeDot"></span>
   </a>
 
+  <!-- USERS -->
   <a data-go="admin-users.html">
     👤 Users
   </a>
 
+  <!-- RECYCLE BIN -->
   <a data-go="recyclebin.html" data-page="recycle">
     🗑 Recycle Bin <span class="activeDot"></span>
   </a>
 
   <hr>
 
+  <!-- LOGOUT -->
   <a id="logoutBtn">🚪 Logout</a>
+
 </div>
-
-<div id="overlay"></div>
-
 
 <!-- OVERLAY -->
 <div id="overlay"></div>
