--- a/shared/menu.html
+++ b/shared/menu.html
@@ -25,6 +25,10 @@
     📁 Projects <span class="activeDot"></span>
   </a>
 
+  <a data-go="projects/" data-page="projects">
+  📁 Projects <span class="activeDot"></span>
+</a>
+
   <!-- RECORDS -->
   <a data-go="register.html" data-page="register">
     📂 Records <span class="activeDot"></span>
