--- a/shared/menu.html
+++ b/shared/menu.html
@@ -20,14 +20,10 @@
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <!-- ✅ PROJECTS (ONLY ONE) -->
-  <a data-go="projects/project-list.html" data-page="projects">
+  <!-- ✅ PROJECTS (ONLY ONE, CORRECT) -->
+  <a data-go="projects/" data-page="projects">
     📁 Projects <span class="activeDot"></span>
   </a>
-
-  <a data-go="projects/" data-page="projects">
-  📁 Projects <span class="activeDot"></span>
-</a>
 
   <!-- RECORDS -->
   <a data-go="register.html" data-page="register">
