--- a/shared/menu.html
+++ b/shared/menu.html
@@ -4,7 +4,7 @@
 <!-- SIDEBAR -->
 <div id="sidebar">
 
-  <!-- APP TITLE + USER BADGE -->
+  <!-- APP TITLE + USER -->
   <h3>
     Billing App <br>
     <small id="userBadge" style="font-size:12px;color:#c7d2fe"></small>
@@ -20,8 +20,8 @@
     🧾 Billing <span class="activeDot"></span>
   </a>
 
-  <!-- ✅ PROJECTS (ONLY ONE, CORRECT) -->
-  <a data-go="projects/" data-page="projects">
+  <!-- ✅ PROJECTS (ONLY ONE – FIXED) -->
+  <a data-go="projects/project-list.html" data-page="projects">
     📁 Projects <span class="activeDot"></span>
   </a>
 
