--- a/projects/project-view.html
+++ b/projects/project-view.html
@@ -1,1 +1,79 @@
-project-view.html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Project Details</title>
+<link rel="stylesheet" href="../assets/menu.css">
+<style>
+.main{padding:20px}
+.card{border:1px solid #ccc;padding:12px;margin-bottom:12px}
+table{width:100%;border-collapse:collapse}
+th,td{border:1px solid #ccc;padding:6px}
+</style>
+</head>
+
+<body>
+
+<div id="menuContainer"></div>
+
+<div class="main">
+  <h2 id="projectTitle">📁 Project</h2>
+
+  <!-- PROJECT INFO -->
+  <div class="card">
+    <h3>Project Info</h3>
+    <p><b>Client:</b> <span id="clientName"></span></p>
+    <p><b>Status:</b> <span id="status"></span></p>
+  </div>
+
+  <!-- SUMMARY -->
+  <div class="card">
+    <h3>Summary</h3>
+    <p>Income: ₹ <span id="income">0</span></p>
+    <p>Expense: ₹ <span id="expense">0</span></p>
+    <p><b>Balance:</b> ₹ <span id="balance">0</span></p>
+  </div>
+
+  <!-- TRANSACTIONS -->
+  <div class="card">
+    <h3>Add Entry</h3>
+    <select id="type">
+      <option value="income">Income</option>
+      <option value="expense">Expense</option>
+    </select>
+    <input id="amount" type="number" placeholder="Amount">
+    <input id="note" placeholder="Note">
+    <button onclick="addEntry()">Add</button>
+  </div>
+
+  <div class="card">
+    <h3>Ledger</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Type</th>
+          <th>Amount</th>
+          <th>Note</th>
+        </tr>
+      </thead>
+      <tbody id="rows"></tbody>
+    </table>
+  </div>
+</div>
+
+<script src="project.js"></script>
+<script src="project-transactions.js"></script>
+
+<script src="../shared/menu.js"></script>
+<script>
+fetch("../shared/menu.html")
+.then(r=>r.text())
+.then(h=>{
+  menuContainer.innerHTML=h;
+  initMenu();
+});
+</script>
+
+</body>
+</html>
