--- a/projects/project-view.html
+++ b/projects/project-view.html
@@ -6,9 +6,14 @@
 <link rel="stylesheet" href="../assets/menu.css">
 <style>
 .main{padding:20px}
-.card{border:1px solid #ccc;padding:10px;margin-bottom:10px}
-table{width:100%;border-collapse:collapse}
+.card{border:1px solid #ccc;padding:12px;margin-bottom:12px}
+input,select,button{padding:6px;margin-right:6px}
+table{width:100%;border-collapse:collapse;margin-top:10px}
 th,td{border:1px solid #ccc;padding:6px}
+.badge{padding:2px 8px;border-radius:6px;font-size:12px}
+.running{background:#dcfce7}
+.paused{background:#fef9c3}
+.closed{background:#fee2e2}
 </style>
 </head>
 
@@ -16,21 +21,40 @@ th,td{border:1px solid #ccc;padding:6px}
 <div id="menuContainer"></div>
 
 <div class="main">
+
 <h2 id="title"></h2>
 
 <div class="card">
 <b>Client:</b> <span id="client"></span><br>
-<b>Status:</b> <span id="status"></span>
+<b>Status:</b>
+<span id="statusBadge" class="badge"></span>
+<br><br>
+
+<button onclick="setStatus('running')">▶ Running</button>
+<button onclick="setStatus('paused')">⏸ Pause</button>
+<button onclick="setStatus('closed')">⛔ Close</button>
 </div>
 
-<div class="card">
-<h3>Add Transaction</h3>
+<div class="card" id="txBox">
+<h3>Add Entry</h3>
+
 <select id="type">
-  <option value="income">Income</option>
-  <option value="expense">Expense</option>
+  <option value="income">Client Payment</option>
+  <option value="expense">Vendor Expense</option>
 </select>
+
 <input id="amount" type="number" placeholder="Amount">
+
+<input id="party" placeholder="Client / Vendor name">
+
+<select id="mode">
+  <option>Cash</option>
+  <option>UPI</option>
+  <option>Bank</option>
+</select>
+
 <input id="note" placeholder="Note">
+
 <button onclick="addTx()">Add</button>
 </div>
 
@@ -45,14 +69,19 @@ Expense: ₹ <span id="exp">0</span><br>
 <h3>Ledger</h3>
 <table>
 <thead>
-<tr><th>Date</th><th>Type</th><th>Amount</th><th>Note</th></tr>
+<tr>
+<th>Date</th><th>Type</th><th>Party</th>
+<th>Mode</th><th>Amount</th><th>Note</th>
+</tr>
 </thead>
 <tbody id="ledger"></tbody>
 </table>
 </div>
+
 </div>
 
 <script src="data/projects.js"></script>
+
 <script>
 const id = new URLSearchParams(location.search).get("id");
 const list = getProjects();
@@ -60,34 +89,65 @@ const p = list.find(x=>x.id===id);
 
 title.innerText = "📁 " + p.name;
 client.innerText = p.client || "-";
-status.innerText = p.status;
 
+function refreshStatus(){
+  statusBadge.innerText = p.status;
+  statusBadge.className = "badge " + p.status;
+
+  if(p.status==="closed"){
+    txBox.style.display="none";
+  }
+}
+refreshStatus();
+
+function setStatus(s){
+  p.status = s;
+  saveProjects(list);
+  refreshStatus();
+}
+
+/* ===== RENDER ===== */
 function render(){
   let i=0,e=0;
   ledger.innerHTML="";
+
   p.entries.forEach(t=>{
     t.type==="income" ? i+=t.amount : e+=t.amount;
-    ledger.innerHTML += `
+    ledger.innerHTML+=`
     <tr>
       <td>${t.date}</td>
       <td>${t.type}</td>
+      <td>${t.party||"-"}</td>
+      <td>${t.mode||"-"}</td>
       <td>${t.amount}</td>
-      <td>${t.note}</td>
+      <td>${t.note||""}</td>
     </tr>`;
   });
-  inc.innerText=i; exp.innerText=e; bal.innerText=i-e;
+
+  inc.innerText=i;
+  exp.innerText=e;
+  bal.innerText=i-e;
 }
 
+/* ===== ADD ENTRY ===== */
 function addTx(){
-  if(!amount.value) return alert("Amount needed");
+  if(p.status==="closed"){
+    return alert("Project closed");
+  }
+
+  if(!amount.value) return alert("Amount required");
+
   p.entries.push({
     type:type.value,
     amount:+amount.value,
+    party:party.value,
+    mode:mode.value,
     note:note.value,
     date:new Date().toLocaleDateString()
   });
+
   saveProjects(list);
-  amount.value=""; note.value="";
+  amount.value=""; party.value=""; note.value="";
   render();
 }
 
@@ -96,9 +156,10 @@ render();
 
 <script src="../shared/menu.js"></script>
 <script>
-fetch("../shared/menu.html").then(r=>r.text()).then(h=>{
-  menuContainer.innerHTML=h; initMenu();
-});
+fetch("../shared/menu.html")
+.then(r=>r.text())
+.then(h=>{menuContainer.innerHTML=h;initMenu();});
 </script>
+
 </body>
 </html>
