--- a/projects/project-view.html
+++ b/projects/project-view.html
@@ -45,6 +45,20 @@ button{padding:12px 18px;border:none;border-radius:12px;font-size:15px}
 
 <!-- ENTRY FORM -->
 <div id="form" style="display:none">
+
+  <select id="entryType">
+    <option value="in">Cash In</option>
+    <option value="out">Cash Out</option>
+  </select>
+
+  <select id="category">
+    <option value="misc">General</option>
+    <option value="vendor">Vendor Expense</option>
+    <option value="client">Client Advance</option>
+  </select>
+
+  <input id="party" placeholder="Vendor / Client name">
+
   <select id="mode">
     <option>Cash</option>
     <option>UPI</option>
@@ -55,11 +69,9 @@ button{padding:12px 18px;border:none;border-radius:12px;font-size:15px}
   <input id="note" placeholder="Note">
   <input id="file" type="file" accept="image/*">
 
-  <button onclick="saveEntry()">Save</button>
+  <button onclick="saveEntry()">Save Entry</button>
 </div>
-
 </div>
-
 <script src="data/projects.store.js"></script>
 <script src="project-view.js"></script>
 
