--- a/projects/project-list.html
+++ b/projects/project-list.html
@@ -19,18 +19,22 @@ th,td{border:1px solid #ccc;padding:8px}
 
 <input id="pName" placeholder="Project name">
 <input id="pClient" placeholder="Client name">
-<button onclick="addProject()">➕ Add</button>
+<button onclick="addProject()">+ Add Project</button>
 
 <table>
 <thead>
-<tr><th>Name</th><th>Client</th><th>Status</th><th></th></tr>
+<tr>
+  <th>Name</th>
+  <th>Client</th>
+  <th>Status</th>
+  <th>Action</th>
+</tr>
 </thead>
 <tbody id="rows"></tbody>
 </table>
-</div>
 
-<script src="data/projects.store.js"></script>
-<script src="project.js"></script>
+<script src="data/project-store.js"></script>
+<script src="project-list.js"></script>
 
 <script>
 function render(){
