--- a/masters/client.html
+++ b/masters/client.html
@@ -216,6 +216,18 @@ const form = document.getElementById("clientForm");
 const tableBody = document.getElementById("clientTableBody");
 const searchInput = document.getElementById("clientSearch");
 
+const clientId = document.getElementById("clientId");
+const name = document.getElementById("name");
+const mobile = document.getElementById("mobile");
+const email = document.getElementById("email");
+const gst = document.getElementById("gst");
+const state = document.getElementById("state");
+const pin = document.getElementById("pin");
+const address = document.getElementById("address");
+const notes = document.getElementById("notes");
+const saveBtn = document.getElementById("saveBtn");
+
+
 window.addEventListener("DOMContentLoaded", async () => {
   await refreshList();
 });
